src/styles/components/chat.scss
.chat {
    display: flex;
    flex-direction: column;

    &__container {
        flex: 1;
    }

    &__item {
        display: grid;
        grid-template-columns: 3rem 1fr;
        column-gap: 1rem;
        align-items: center;

        &.right {
            grid-template-columns: 1fr 3rem;
        }

        &.first {
            margin-bottom: .2rem;
        }

        &.middle {
            margin-bottom: .2rem;
        }

        &.last {
            margin-bottom: 1rem;
        }

        &:last-child {
            margin-bottom: 0;
        }
    }
    &__item.right &__avatar {
        grid-column: 2 / 3;
        grid-row: 1 / 2;
    }

    &__item.right &__bubble {
        grid-column: 1 / 2;
        grid-row: 1 / 2;
        background-color: $color-blue;
        color: #fff;
        text-align: right;
        justify-self: right;
    }

    &__bubble {
        font-size: 1.4rem;
        background-color: rgb(245, 245, 245);
        border-radius: 1rem;
        
        padding: 1rem 1.5rem;
        justify-self: left;
    }

    &__item.first &__bubble {
        border-bottom-left-radius: .3rem;
    }
    &__item.last &__bubble {
        border-top-left-radius: .3rem;
    }

    &__item.middle &__bubble {
        border-top-left-radius: .3rem;
        border-bottom-left-radius: .3rem;
    }

    &__item.middle.right &__bubble {
        border-top-left-radius: 1rem;
        border-bottom-left-radius: 1rem;
        border-top-right-radius: .3rem;
        border-bottom-right-radius: .3rem;
    }

    &__item.first.right &__bubble {
        border-bottom-left-radius: 1rem;
        border-bottom-right-radius: .3rem;
    }
    &__item.last.right &__bubble {
        border-top-left-radius: 1rem;
        border-top-right-radius: .3rem;
    }

    &__actions {
        margin-top: 2rem;
        position: relative;
    }

    &__input {
        font-size: 1.4rem;
        font-family: inherit;
        width: 100%;
        min-width: 1px;
        border: none;
        border: .1rem solid $color-blue;
        border-radius: 4rem;
        padding: 1rem 6rem 1rem 2rem;
        transition: all .2s;

        &:hover,
        &:focus {
            outline: 0;
            border-color: $color-purple;
        }

        &:focus {
            box-shadow: inset 0 0 1rem .2rem rgba($color-purple, 0.15);
        }
    }

    &__send {
        position: absolute;
        top: 50%;
        right: 2rem;
        transform: translateY(-50%);
        cursor: pointer;

        &:hover,
        &:focus {
            color: $color-purple;
        }
    }
}

